Code cleanup, format and rename variables to match camel case. Convert loops into streams and data classes to records with updated jdk 17